# pacsifier

./: .coverage  .coveragerc  .dockerignore  .gitignore  .mailmap  .pytest.ini  .readthedocs.yaml  .releaserc.json  .zenodo.json  Dockerfile  LICENSE  Makefile  README.md  __init__.py  add_Karnak_tags.py  anonymize_Dicoms.py  create_DICOMDIR.py  execute_commands.py  extract_Carestream_report.py  extract_clean_report.py  fails.txt  get_container_name.py  get_pseudonyms.py  get_version.py  how_to_use.md  log.txt  pacsman.py  pyproject.toml  sanity_checks.py  setup.cfg  setup.py
.github/workflows/: build-test-deploy.yml
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
.pytest_cache/v/cache/: lastfailed
PACSMAN/: .gitignore  README.md
PACSMAN/code/: execute_commands.py  scrape.py  udo systemctl status docker
PACSMAN/code/tests/: testing.py
PACSMAN/files/: query_patient_ids.dcm  test.csv  test_query_JuliusPopp.csv  test_query_JuliusPopp_badcases.csv
code/: .coverage  anon.py  anonymize.py  anonymize_Dicoms.py  anonymize_specific.py  c3d_nipype.py  convert.py  example_heuristic.py  execute_commands.py  heuristic.py  log.txt  move_dumps.py  new_id.txt  new_scape.py  not_found_hihi.txt  pacsman.py  sanity_checks.py  scrape.py  seek.py  sghipt.py  techa.py
code/.mypy_cache/3.5/: _csv.data.json  _csv.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  csv.data.json  csv.meta.json  datetime.data.json  datetime.meta.json  execute_commands.data.json  execute_commands.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sanity_checks.data.json  sanity_checks.meta.json  shlex.data.json  shlex.meta.json  subprocess.data.json  subprocess.meta.json  sys.data.json  sys.meta.json  time.data.json  time.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  warnings.data.json  warnings.meta.json
code/.mypy_cache/3.6/: _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  datetime.data.json  datetime.meta.json  execute_commands.data.json  execute_commands.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sanity_checks.data.json  sanity_checks.meta.json  scrape.data.json  scrape.meta.json  shlex.data.json  shlex.meta.json  subprocess.data.json  subprocess.meta.json  sys.data.json  sys.meta.json  time.data.json  time.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  warnings.data.json  warnings.meta.json
code/tests/: .coverage  fails.txt  log.txt  mapper.json  output_sample_image  sample_image  test.csv  testing.py  valid.csv
dcmstack/src/dcmstack.egg-info/: PKG-INFO  requires.txt
deployment/: Dockerfile  Dockerfile.smaller
deployment/utils/: create_miniconda3_environment.sh  environment.yml  environment_dev_202001v2.yml  environment_minimal.yml  environment_minimal_202001.yml  environment_minimal_202301.yml
docs/: Makefile  api_cli_subpackage.rst  api_core_subpackage.rst  changes.md  changes.rst  citing.rst  conf.py  contributing.rst  contributors.rst  developer.rst  index.rst  installation.rst  license.rst  usage.rst
environment/: environment_minimal_202301.yml  environment_minimal_202401.yml
files/: class1.csv  class2.csv  class3.csv  class4.csv  config_dicomserveruk.json  device_serial.csv  dump.txt  elena.csv  environment_minimal.yml  julius_popp_all_IPPs_dates.csv  julius_popp_all_IPPs_dates_missing.csv  missing.csv  missing_keys  move_into_folder.py  mussard.csv  new_ids.csv  new_ids_test.json  new_missing.csv  newest_test.csv  not_found.txt  november9.csv  query_patient_ids.dcm  query_rest.csv  techa_old.py  test.csv  test_jonas.csv  test_small.csv  test_small_dicomserveruk.csv  yasser.csv
heudiconv/heudiconv/: convert.py
heudiconv/heudiconv/interfaces/: nipype_c3d.py
pacsifier/: info.py
pacsifier/cli/: __init__.py  add_karnak_tags.py  anonymize_dicoms.py  create_dicomdir.py  get_pseudonyms.py  move_dumps.py  pacsifier.py
pacsifier/core/: sanity_checks.py
pacsifier/core/dcmtk/: commands.py
pacsman/: info.py
pacsman/cli/: __init__.py  add_karnak_tags.py  anonymize_dicoms.py  convert.py  create_dicomdir.py  extract_carestream_report.py  get_pseudonyms.py  move_dumps.py  pacsman.py
pacsman/convert/: convertall.py  heuristic.py
pacsman/core/: execute_commands.py  sanity_checks.py
pacsman/core/dcmtk/: commands.py
scripts/docker/: entrypoint.sh  entrypoint_pytest.sh
src/: convert.py  current.txt  execute_commands.py  heuristic.py  move_dumps.py
src/tests/: test_offline.py  test_online.py  testing.py
src/tests/test_data/: findscu_dump_file_example.txt
tests/: conftest.py  dcmqrscp.cfg  test_offline.py  test_online.py
tests/cli/: test_add_karnak_tags.py  test_anonymize_dicoms.py  test_convert.py  test_create_dicomdir.py  test_get_pseudonyms.py  test_pacsifier.py  test_pacsman.py
tests/config/: config.json  config_dicomserveruk.json  config_upload.json  dcmqrscp.cfg
tests/core/: test_execute_commands.py  test_sanity_checks.py
tests/core/dcmtk/: test_commands.py
tests/test_data/: README.md
tests/test_data/dicomseries/: README.md  slice0.dcm  slice1.dcm  slice10.dcm  slice100.dcm  slice101.dcm  slice102.dcm  slice103.dcm  slice104.dcm  slice105.dcm  slice106.dcm  slice107.dcm  slice108.dcm  slice109.dcm  slice11.dcm  slice110.dcm  slice111.dcm  slice112.dcm  slice113.dcm  slice114.dcm  slice115.dcm  slice116.dcm  slice117.dcm  slice118.dcm  slice119.dcm  slice12.dcm  slice120.dcm  slice121.dcm  slice122.dcm  slice123.dcm  slice124.dcm  slice125.dcm  slice126.dcm  slice127.dcm  slice13.dcm  slice14.dcm  slice15.dcm  slice16.dcm  slice17.dcm  slice18.dcm  (+89 more)
tests/test_data/pseudo_mapping/: pseudo_mapping.csv  pseudo_mapping_empty_cell.csv
utils/: installation_python_modules.sh  miniconda3_spec_file.txt  validate_dot_zenodo_json.py
(+139 files in other folders)
