[metadata]
author = Translational Machine Learning Lab
author_email = sebastien.tourbier1@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Developers
    License :: OSI Approved 
    Programming Language :: Python :: 3.8
description = PACSMAN: Tool to manage and convert radiological PACS data
license = Apache License, Version 2.0
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
project_urls =
    Documentation=https://translationalml.github.io/pacsman
url = https://github.com/TranslationalML/pacsman

[options]
python_requires = >=3.8.17
install_requires =  # file:requirements.txt
    pandas  # >= 0.23.4
    Cerberus >= 1.3.2
    hypothesis >= 6.0.2
    nibabel >= 2.3.0
    nipype
    pydicom >= 2.4.3
    tqdm >= 4.43.0
    beautifulsoup4 >= 4.12.2
    # pybids >= 0.15.3
    # datalad >= 0.19.2
    # datalad-neuroimaging >= 0.3.3

test_requires =
    pytest
    pytest-console-scripts
    pytest-cov
    pytest-order >= 1.1.0

packages = find:

[options.exclude_package_data]
* = tests

[options.extras_require]
doc =
    pydot >= 1.2.3
    sphinx >= 7.1.2
    sphinx-argparse == 0.4.0
    sphinx_rtd_theme == 1.3.0
    recommonmark == 0.7.1
    sphinxcontrib-apidoc == 0.3.0
    sphinxcontrib-mermaid == 0.9.2
    sphinxemoji == 0.2.0
    mock == 5.0.1
    m2r2 == 0.3.2
    docutils == 0.18.1
    commonmark == 0.9.1
dev =
    black ~= 22.3.0
    pre-commit
    isort ~= 5.10.1
docs =
    %(doc)s
test =
    pytest
    pytest-cov
    pytest-console-scripts
    pytest-env
all =
    %(doc)s
    %(dev)s
    %(test)s

[options.package_data]
pacsman =
    files/config_dicomserveruk.json
    files/test_query_dicomserveruk.csv
    VERSION

[options.entry_points]
console_scripts =
    pacsman=pacsman.cli.pacsman:main
    pacsman-add-karnak-tags=pacsman.cli.add_karnak_tags:main
    pacsman-anonymize=pacsman.cli.anonymize_dicoms:main
    pacsman-create-dicomdir=pacsman.cli.create_dicomdir:main
    pacsman-get-pseudonyms=pacsman.cli.get_pseudonyms:main
    pacsman-move-csv=pacsman.cli.move_dumps:main

[flake8]
max-line-length = 99
doctests = False
exclude=*build/
ignore =
    W503
    E203
per-file-ignores =
    **/__init__.py : F401
    docs/conf.py : E265

[tool:pytest]
norecursedirs = .git
addopts = -svx
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
junit_family=xunit2
