[metadata]
author = Translational Machine Learning Lab
author_email = sebastien.tourbier1@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.10
description = PACSIFIER: batch DICOM query/retrieve tool for PACS systems
license = Apache License, Version 2.0
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
project_urls =
    Documentation=https://translationalml.github.io/pacsifier
url = https://github.com/TranslationalML/pacsifier

[options]
python_requires = >=3.10
install_requires =  # file:requirements.txt
    pandas == 2.2
    Cerberus == 1.3.5
    hypothesis == 6.98
    nibabel == 5.2
    pydicom == 2.4
    tqdm == 4.66
    beautifulsoup4 == 4.12
    jsonschema == 4.21
test_requires =
    pytest == 7.4
    pytest-console-scripts == 1.4
    pytest-cov == 4.1
    pytest-order == 1.2
packages = find:

[options.packages.find]
exclude =
    tests*
    docs*

[options.extras_require]
doc =
    pydot == 2.0
    sphinx == 7.2
    sphinx-argparse == 0.4
    sphinx_rtd_theme == 2.0
    recommonmark == 0.7
    sphinxcontrib-apidoc == 0.5
    sphinxcontrib-mermaid == 0.9
    sphinxemoji == 0.3
    mock == 5.1
    myst-parser == 4.0
    docutils == 0.20
    commonmark == 0.9
dev =
    black == 24.2
    pre-commit == 3.6
    isort == 5.13
docs =
    %(doc)s
test =
    pytest == 7.4
    pytest-console-scripts == 1.4
    pytest-cov == 4.1
    pytest-order == 1.2
all =
    %(doc)s
    %(dev)s
    %(test)s

[options.package_data]
pacsifier =
    files/config_dicomserveruk.json
    files/test_query_dicomserveruk.csv
    VERSION

[options.entry_points]
console_scripts =
    pacsifier=pacsifier.cli.pacsifier:main
    pacsifier-add-karnak-tags=pacsifier.cli.add_karnak_tags:main
    pacsifier-anonymize=pacsifier.cli.anonymize_dicoms:main
    pacsifier-create-dicomdir=pacsifier.cli.create_dicomdir:main
    pacsifier-get-pseudonyms=pacsifier.cli.get_pseudonyms:main
    pacsifier-move-csv=pacsifier.cli.move_dumps:main

[flake8]
max-line-length = 99
doctests = False
exclude=*build/
ignore =
    W503
    E203
per-file-ignores =
    **/__init__.py : F401
    docs/conf.py : E265
